--- a/acme_project/templates/includes/header.html
+++ b/acme_project/templates/includes/header.html
@@ -12,7 +12,7 @@
           <li class="nav-item">
             <a class="nav-link {% if view_name == 'birthday:create' %} active {% endif %}"
               href="{% url 'birthday:create' %}">
-              Калькулятор дней рождения
+              Birthday calculator 
             </a>
           </li>
         </ul>
