--- a/acme_project/templates/includes/header.html
+++ b/acme_project/templates/includes/header.html
@@ -6,7 +6,7 @@
           <li class="nav-item">
             <a class="nav-link {% if view_name == 'pages:homepage' %} active {% endif %}"
               href="{% url 'pages:homepage' %}">
-              Главная
+              Main
             </a>
           </li>
           <li class="nav-item">
